--- a/bower.json
+++ b/bower.json
@@ -18,9 +18,17 @@
     "ngMask": "angular-mask#^3.0.16",
     "ng-tags-input": "3.0.0",
     "angular-scroll": "^1.0.0",
-    "angular-timeago": "^0.4.1"
+    "angular-timeago": "^0.4.1",
+    "angular-elastic-input": "^2.2.0",
+    "unslider": "^2.0.3",
+    "jquery": "^2.2.4",
+    "angular-slick-carousel": "^3.1.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
+  },
+  "resolutions": {
+    "jquery": "^2.2.4",
+    "angular": "~1.5.0"
   }
 }
