--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^4.1.2",
     "morgan": "~1.7.0",
     "ng-mask": "^3.0.12",
+    "nodemailer": "^2.4.2",
     "passport": "~0.3.0",
     "passport-google-oauth20": "^1.0.0",
     "passport-local": "^1.0.0",
