--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "server/app.js",
   "dependencies": {
     "angular-ui-bootstrap": "^1.3.2",
+    "async": "^2.0.0-rc.6",
     "babel-polyfill": "^6.7.2",
     "babel-runtime": "^6.6.1",
     "bluebird": "^3.3.3",
@@ -12,6 +13,8 @@
     "compression": "^1.5.2",
     "connect-mongo": "^1.1.0",
     "cookie-parser": "^1.3.5",
+    "ejs": "^2.4.2",
+    "email-templates": "^2.3.0",
     "errorhandler": "^1.4.2",
     "express": "^4.13.3",
     "express-jwt": "^3.0.0",
