--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "angular-scroll": "^1.0.0",
     "angular-timeago": "^0.4.1",
     "angular-elastic-input": "^2.2.0",
-    "angular-slick-carousel": "^3.1.5"
+    "angular-slick-carousel": "^3.1.5",
+    "angular-elastic": "^2.5.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
