--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "connect-mongo": "^1.1.0",
     "cookie-parser": "^1.3.5",
     "ejs": "^2.4.2",
+    "elasticsearch": "^11.0.1",
     "email-templates": "^2.3.0",
     "errorhandler": "^1.4.2",
     "express": "^4.13.3",
@@ -24,6 +25,7 @@
     "lodash": "^4.6.1",
     "lusca": "^1.3.0",
     "method-override": "^2.3.5",
+    "mongoosastic": "^4.0.2",
     "mongoose": "^4.1.2",
     "morgan": "~1.7.0",
     "ng-mask": "^3.0.12",
