--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "angular-timeago": "^0.4.1",
     "angular-elastic-input": "^2.2.0",
     "angular-slick-carousel": "^3.1.5",
-    "angular-elastic": "^2.5.1"
+    "angular-elastic": "^2.5.1",
+    "angular-trix": "^1.0.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
