--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "conclude",
   "version": "0.0.0",
   "dependencies": {
+    "angular-ui-tinymce": "latest",
     "jquery": "^2.2.4",
     "unslider": "^2.0.3",
     "angular": "~1.5.0",
@@ -24,13 +25,17 @@
     "angular-elastic-input": "^2.2.0",
     "angular-slick-carousel": "^3.1.5",
     "angular-elastic": "^2.5.1",
-    "angular-trix": "^1.0.2"
+    "angular-trix": "^1.0.2",
+    "angular-inline-text-editor": "^0.3.23",
+    "rangy": "^1.3.0",
+    "components-font-awesome": "^4.6.3",
+    "angular-animate": "^1.5.8"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
   },
   "resolutions": {
     "jquery": "^2.2.4",
-    "angular": "~1.5.0"
+    "angular": "1.5.8"
   }
 }
