--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "main": "server/app.js",
   "dependencies": {
+    "angular-animate": "^1.5.8",
     "angular-ui-bootstrap": "^1.3.2",
+    "angular-ui-tinymce": "0.0.16",
     "async": "^2.0.0-rc.6",
     "babel-polyfill": "^6.7.2",
     "babel-runtime": "^6.6.1",
@@ -38,17 +40,24 @@
   "devDependencies": {
     "autoprefixer": "^6.0.0",
     "babel-core": "^6.6.5",
-    "babel-register": "^6.6.5",
     "babel-plugin-transform-class-properties": "^6.6.0",
     "babel-plugin-transform-runtime": "^6.6.0",
     "babel-preset-es2015": "^6.6.0",
+    "babel-register": "^6.6.5",
+    "chai": "^3.2.0",
+    "chai-as-promised": "^5.1.0",
+    "chai-things": "^0.2.0",
+    "connect-livereload": "^0.5.3",
     "del": "^2.0.2",
+    "grunt": "^1.0.1",
+    "grunt-build-control": "^0.7.0",
     "gulp": "^3.9.1",
     "gulp-add-src": "^0.2.0",
     "gulp-angular-templatecache": "^1.7.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^6.1.2",
     "gulp-cache": "^0.4.2",
+    "gulp-clean-css": "^2.0.6",
     "gulp-concat": "^2.6.0",
     "gulp-env": "^0.4.0",
     "gulp-filter": "^4.0.0",
@@ -56,12 +65,11 @@
     "gulp-inject": "^4.0.0",
     "gulp-istanbul": "~0.10.3",
     "gulp-istanbul-enforcer": "^1.0.3",
+    "gulp-jade": "^1.0.1",
     "gulp-jscs": "^3.0.2",
     "gulp-jshint": "^2.0.0",
-    "jshint": "2.9.2",
     "gulp-livereload": "^3.8.0",
     "gulp-load-plugins": "^1.0.0-rc.1",
-    "gulp-clean-css": "^2.0.6",
     "gulp-mocha": "^2.1.3",
     "gulp-ng-annotate": "^2.0.0",
     "gulp-ng-constant": "^1.1.0",
@@ -73,48 +81,42 @@
     "gulp-rev-replace": "^0.4.2",
     "gulp-sort": "^2.0.0",
     "gulp-sourcemaps": "^1.5.2",
+    "gulp-stylint": "^3.0.0",
+    "gulp-stylus": "latest",
     "gulp-svgmin": "^1.1.2",
     "gulp-uglify": "^1.2.0",
     "gulp-useref": "^3.0.3",
     "gulp-util": "^3.0.5",
     "gulp-watch": "^4.3.5",
-    "gulp-jade": "^1.0.1",
-    "gulp-stylus": "latest",
-    "gulp-stylint": "^3.0.0",
-    "nib": "^1.1.0",
-    "grunt": "^1.0.1",
-    "grunt-build-control": "^0.7.0",
     "isparta": "^4.0.0",
-    "utile": "~0.3.0",
-    "nodemon": "^1.3.7",
-    "run-sequence": "^1.1.0",
-    "lazypipe": "^1.0.1",
-    "wiredep": "^2.2.2",
-    "open": "~0.0.4",
-    "jshint-stylish": "^2.2.0",
-    "connect-livereload": "^0.5.3",
     "istanbul": "~0.4.1",
-    "chai": "^3.2.0",
-    "sinon": "^1.16.1",
-    "chai-as-promised": "^5.1.0",
-    "chai-things": "^0.2.0",
+    "jshint": "2.9.2",
+    "jshint-stylish": "^2.2.0",
     "karma": "~0.13.3",
-    "karma-firefox-launcher": "^1.0.0",
-    "karma-script-launcher": "^1.0.0",
-    "karma-chrome-launcher": "^1.0.1",
-    "karma-jade-preprocessor": "0.0.11",
-    "karma-phantomjs-launcher": "~1.0.0",
-    "karma-ng-jade2js-preprocessor": "^0.2.0",
-    "karma-ng-html2js-preprocessor": "^1.0.0",
-    "karma-spec-reporter": "~0.0.20",
-    "sinon-chai": "^2.8.0",
-    "mocha": "^2.2.5",
-    "karma-mocha": "^1.0.1",
-    "karma-chai-plugins": "~0.7.0",
     "karma-babel-preprocessor": "^6.0.1",
+    "karma-chai-plugins": "~0.7.0",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-jade-preprocessor": "0.0.11",
+    "karma-mocha": "^1.0.1",
+    "karma-ng-html2js-preprocessor": "^1.0.0",
+    "karma-ng-jade2js-preprocessor": "^0.2.0",
+    "karma-phantomjs-launcher": "~1.0.0",
+    "karma-script-launcher": "^1.0.0",
+    "karma-spec-reporter": "~0.0.20",
+    "lazypipe": "^1.0.1",
+    "mocha": "^2.2.5",
+    "nib": "^1.1.0",
+    "nodemon": "^1.3.7",
+    "open": "~0.0.4",
     "phantomjs-prebuilt": "^2.1.4",
     "proxyquire": "^1.0.1",
-    "supertest": "^1.1.0"
+    "run-sequence": "^1.1.0",
+    "sinon": "^1.16.1",
+    "sinon-chai": "^2.8.0",
+    "supertest": "^1.1.0",
+    "utile": "~0.3.0",
+    "wiredep": "^2.2.2"
   },
   "engines": {
     "node": "^4.4.0",
