--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "conclude",
   "version": "0.0.0",
   "dependencies": {
-    "angular-ui-tinymce": "latest",
+    "angular-ui-tinymce": "4.3.12",
     "jquery": "^2.2.4",
     "unslider": "^2.0.3",
     "angular": "~1.5.0",
@@ -29,7 +29,9 @@
     "angular-inline-text-editor": "^0.3.23",
     "rangy": "^1.3.0",
     "components-font-awesome": "^4.6.3",
-    "angular-animate": "^1.5.8"
+    "angular-animate": "^1.5.8",
+    "ng-sortable": "^1.3.6",
+    "angular-ui-sortable": "^0.14.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
